RESOLVED FIXED265921
[WebGPU] float32-filterable is not properly validated in bind group creation
https://bugs.webkit.org/show_bug.cgi?id=265921
Summary [WebGPU] float32-filterable is not properly validated in bind group creation
Mike Wyrzykowski
Reported 2023-12-05 18:05:42 PST
[WebGPU] float32-filterable is not properly validated in bind group creation
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-05 18:05:55 PST
Mike Wyrzykowski
Comment 2 2023-12-05 18:14:32 PST
EWS
Comment 3 2023-12-06 18:38:04 PST
Committed 271653@main (0a661a76704f): <https://commits.webkit.org/271653@main> Reviewed commits have been landed. Closing PR #21372 and removing active labels.
EWS
Comment 4 2023-12-06 23:20:34 PST
Committed 271663@main (c6a7ecd2f173): <https://commits.webkit.org/271663@main> Reviewed commits have been landed. Closing PR #21426 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.