[WebGPU] float32-filterable is not properly validated in bind group creation https://bugs.webkit.org/show_bug.cgi?id=265921 <radar://119227113>

Reviewed by Tadeu Zagallo.

We can only use float32 filtering textures in bind groups if the float32-filterable
feature is enabled.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/texture/float32_filterable-expected.txt: Added.
Add passing expectation.

* Source/WebGPU/WebGPU/BindGroup.mm:
(WebGPU::hasBinding):
(WebGPU::is32bppFloatFormat):
(WebGPU::valid32bppFloatSampleType):
(WebGPU::Device::createBindGroup):

* Source/WebCore/Modules/WebGPU/GPUFeatureName.h:
(WebCore::convertToBacking):

* Source/WebCore/Modules/WebGPU/GPUFeatureName.idl:
* Source/WebCore/Modules/WebGPU/Implementation/WebGPUConvertToBackingContext.cpp:
(WebCore::WebGPU::ConvertToBackingContext::convertToBacking):

* Source/WebCore/Modules/WebGPU/InternalAPI/WebGPUFeatureName.h:
Add missing float32-filterable feature.

* Source/WebGPU/WebGPU/HardwareCapabilities.mm:
(WebGPU::baseFeatures):
Add feature if the device supports it.

Canonical link: https://commits.webkit.org/271653@main