Source/WebGPU/WebGPU/HardwareCapabilities.mm
@@ -98,7 +98,9 @@ static Vector<WGPUFeatureName> baseFeatures(id<MTLDevice> device, const Hardware
     features.append(WGPUFeatureName_IndirectFirstInstance);
     features.append(WGPUFeatureName_RG11B10UfloatRenderable);
     features.append(WGPUFeatureName_ShaderF16);
-    features.append(static_cast<WGPUFeatureName>(WGPUFeatureName_BGRA8UnormStorage));
+    features.append(WGPUFeatureName_BGRA8UnormStorage);
+    if (device.supports32BitFloatFiltering)
+        features.append(WGPUFeatureName_Float32Filterable);
 
     return features;
 }
